More work toward eventual generic test suite (ability to plug in and test against other vendor's drivers) More work toward supporting declared coverage with the eventual goal of reporting on and reconciling declared versus measured coverage. Various test improvements / stubs converted to implementations, etc.
TODO: updates to XA and pooling facility tests.

git-svn-id: https://svn.code.sf.net/p/hsqldb/svn/base/trunk@5074 7c7dc5f5-a22d-0410-a3af-b41755a11667